Closes #18 and more:
* Set version as 1.0.0-M4
* Complete redesign of analysis and generation, now done after type-checking (`ANALYZE` fase);
* Solved missing symbols that caused `NullPointerException`;
* Restored non-breaking errors and failures without exceptions;
* Full support for internal and anonymous classes, including `enum`s with methods;
* Usage of custom, typed diagnostics, with messages on resource bundles like `javac` compiler messages (thus localizable).
* Fix Bug on jdk 11.0.9 on a breaking change on type variable definition (Issue #19 hotfixed on M3);
* Fix `zeroValue` implementation for a breaking change in JDK 13+ (Issue #20 hotfixed on M3);
* Add new and refactor old tests involving compilation errors
* Update junit dependency to solve security issue reported by GitHub